Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-103747

DocBook links to previous/next page are invalid

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.4.0 Beta1
    • 6.3.0
    • Build tools: qdoc
    • None
    • ed9dec684c (qt/qttools/dev) ed9dec684c (qt/tqtc-qttools/dev) ed9dec684c (qt/qttools/6.4) ed9dec684c (qt/tqtc-qttools/6.4)
    • DaVinci 56

      For instance, in xml-streaming.xml (qtxml module), qdoc 6.3.0 generates the following output:

      <db:extendedlink><db:link xlink:to="xml-namespaces.xml" xlink:title="prev" xlink:label="An Introduction to Namespaces"/></db:extendedlink>

      This DocBook excerpt is invalid. With DocBook 5.2 CR 1 schema, Jing produces the following errors:

      System ID: D:\Qt\6.3.0\doc_02\xml-streaming.xml.bak
      Main validation file: D:\Qt\6.3.0\doc_02\xml-streaming.xml.bak
      Scenario name: DocBook 5
      Schema: C:\Program Files\Oxygen XML Editor 23\frameworks\docbook\5.1\rng\docbookxi.rng
      Document type: DocBook 5 - QtDocTools
      Engine name: Jing
      Severity: error
      Problem ID: invalid_attribute_name
      Description: attribute "xlink:label" not allowed here; expected attribute "annotations", "arch", "audience", "condition", "conformance", "dir", "endterm", "os", "outputformat", "prefix", "property", "remap", "resource", "revision", "revisionflag", "role", "security", "typeof", "userlevel", "vendor", "version", "vocab", "wordsize", "xlink:actuate", "xlink:arcrole", "xlink:from", "xlink:show", "xlink:type", "xml:base", "xml:id", "xml:lang", "xreflabel" or "xrefstyle"
      Start location: 8:76
      End location: 8:119
      
      System ID: D:\Qt\6.3.0\doc_02\xml-streaming.xml.bak
      Main validation file: D:\Qt\6.3.0\doc_02\xml-streaming.xml.bak
      Scenario name: DocBook 5
      Schema: C:\Program Files\Oxygen XML Editor 23\frameworks\docbook\5.1\rng\docbookxi.rng
      Document type: DocBook 5 - QtDocTools
      Engine name: Jing
      Severity: error
      Problem ID: required_attribute_missing
      Description: element "db:link" missing required attribute "xlink:type"
      Start location: 8:19
      End location: 8:26
      

      The correct DocBook output for that link would be:

      <db:extendedlink xlink:type="extended"><db:link xlink:to="xml-namespaces.xml" xlink:title="An Introduction to Namespaces" xlink:type="arc" xlink:arcrole="prev"/></db:extendedlink>

      Here is a patch that should fix the issue: https://github.com/dourouc05/qttools/commit/c31bf7b63f19770a2ed1d0c45de3e30ff69d27b7 (I could submit it to code review, but I have to reinstall everything first). Compared to this patch, new lines should be added when the <db:extendedlink> elements are closed.

        For Gerrit Dashboard: QTBUG-103747
        # Subject Branch Project Status CR V

            docinfrastructure Documentation Infrastructure Team
            dourouc05_ Thibaut Cuvelier
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes