Fix DocBook validity of extended XLinks

qdoc uses extended links, which was not explicitly indicated before. The
use of the label attribute was wrong.

Reference: https://www.w3.org/TR/xlink11/

The regression files for `tst_generatedoutput` were regenerated to get
the changes into account.

Fixes: QTBUG-103747
Change-Id: Ie3a299cf13bd56d3bccd4c8f37fa6954693a289d
Reviewed-by: Luca Di Sera <luca.disera@qt.io>