src/qdoc/docbookgenerator.cpp
@@ -1431,13 +1431,15 @@ void DocBookGenerator::generateHeader(const QString &title, const QString &subTi
                 anchorPair = anchorForNode(linkNode);
 
             m_writer->writeStartElement(dbNamespace, "extendedlink");
+            m_writer->writeAttribute(xlinkNamespace, "type", "extended");
             m_writer->writeEmptyElement(dbNamespace, "link");
             m_writer->writeAttribute(xlinkNamespace, "to", anchorPair.first);
-            m_writer->writeAttribute(xlinkNamespace, "title", "prev");
+            m_writer->writeAttribute(xlinkNamespace, "type", "arc");
+            m_writer->writeAttribute(xlinkNamespace, "arcrole", "prev");
             if (linkPair.first == linkPair.second && !anchorPair.second.isEmpty())
-                m_writer->writeAttribute(xlinkNamespace, "label", anchorPair.second);
+                m_writer->writeAttribute(xlinkNamespace, "title", anchorPair.second);
             else
-                m_writer->writeAttribute(xlinkNamespace, "label", linkPair.second);
+                m_writer->writeAttribute(xlinkNamespace, "title", linkPair.second);
             m_writer->writeEndElement(); // extendedlink
         }
         if (node->links().contains(Node::NextLink)) {
@@ -1449,13 +1451,15 @@ void DocBookGenerator::generateHeader(const QString &title, const QString &subTi
                 anchorPair = anchorForNode(linkNode);
 
             m_writer->writeStartElement(dbNamespace, "extendedlink");
+            m_writer->writeAttribute(xlinkNamespace, "type", "extended");
             m_writer->writeEmptyElement(dbNamespace, "link");
             m_writer->writeAttribute(xlinkNamespace, "to", anchorPair.first);
-            m_writer->writeAttribute(xlinkNamespace, "title", "prev");
+            m_writer->writeAttribute(xlinkNamespace, "type", "arc");
+            m_writer->writeAttribute(xlinkNamespace, "arcrole", "next");
             if (linkPair.first == linkPair.second && !anchorPair.second.isEmpty())
-                m_writer->writeAttribute(xlinkNamespace, "label", anchorPair.second);
+                m_writer->writeAttribute(xlinkNamespace, "title", anchorPair.second);
             else
-                m_writer->writeAttribute(xlinkNamespace, "label", linkPair.second);
+                m_writer->writeAttribute(xlinkNamespace, "title", linkPair.second);
             m_writer->writeEndElement(); // extendedlink
         }
         if (node->links().contains(Node::StartLink)) {
@@ -1467,13 +1471,15 @@ void DocBookGenerator::generateHeader(const QString &title, const QString &subTi
                 anchorPair = anchorForNode(linkNode);
 
             m_writer->writeStartElement(dbNamespace, "extendedlink");
+            m_writer->writeAttribute(xlinkNamespace, "type", "extended");
             m_writer->writeEmptyElement(dbNamespace, "link");
             m_writer->writeAttribute(xlinkNamespace, "to", anchorPair.first);
-            m_writer->writeAttribute(xlinkNamespace, "title", "start");
+            m_writer->writeAttribute(xlinkNamespace, "type", "arc");
+            m_writer->writeAttribute(xlinkNamespace, "arcrole", "start");
             if (linkPair.first == linkPair.second && !anchorPair.second.isEmpty())
-                m_writer->writeAttribute(xlinkNamespace, "label", anchorPair.second);
+                m_writer->writeAttribute(xlinkNamespace, "title", anchorPair.second);
             else
-                m_writer->writeAttribute(xlinkNamespace, "label", linkPair.second);
+                m_writer->writeAttribute(xlinkNamespace, "title", linkPair.second);
             m_writer->writeEndElement(); // extendedlink
         }
     }
